--- a/Style-adapt.css
+++ b/Style-adapt.css
@@ -113,6 +113,7 @@
 
     .im__mob-back {
         background-image: url(imeges/sla.jpg);
+        background-size: cover;
     }
 
     .button-container {
@@ -275,7 +276,7 @@ section3****/
 
     .mobform {
         width: 340px;
-        margin-top: 40px;
+        margin-top: 100px;
 
     }
 
@@ -306,8 +307,9 @@ section3****/
     .mob-bacraund {
         background: #131313;
         margin: 0 auto;
-        height: 750px;
+        height: 100%;
     }
+
 
     .section3__icon1 {
         max-width: 338px;
@@ -331,6 +333,15 @@ section3****/
         width: 375px;
         margin: 0 auto;
         height: 2250px;
+
+
+    }
+
+    .backraund__f {
+        background: #FFFFFF;
+        margin-top: 350px;
+        padding-top: 58px;
+
     }
 
     .section3__interior_2 {
